# ocf

./: .gitignore  .index.html.swp  .project  .pydevproject  .swp  00OFELIA  CHANGELOG  LICENSE  MANIFEST.in  README  README.md  egeni.db  index.html  new_logs.sh  params.json  schema.xsd  server_schema.xsd  setup.py  status  testXMLRPCappIsolation.py  updater1
AMsoil/: .gitignore  LICENCE.txt  README.md  install.py
OM/: OMDB.db  Tables (Autosaved).rtf  Tables.rtf  settings.py  urls.py
aggrMgr/: Makefile.am  aggrMgr.cc  aggrMgr.hh  linkInfo.hh  message.h
ambase/: .project
cred/: authority.cred  seethara.pkey  sfi_config
deploy/: info_step.sh  install.py  migrate.py  remove.py  splash.sh  upgrade.py  utils.py
doc/: INSTALL  flash-io.txt  of_geni_tutorial.pptx
expedient/: .gitignore  License  README  new_links_apache_config_files.sh  old_links_apache_config_files.sh  recursive_replace_imports.sh  version
gcf/: .gitignore  .pydevproject  LICENSE.txt  README.txt  TODO.txt
geniLight/: README  geniLight_client.py  geniLight_server.py
geniv3/: vtam_advertisement.xsd  vtam_manifest.xsd  vtam_request.xsd
install/: flowvisor.sh  install.py  splash.sh  utils.py
monitoring/: backUpDatabase  backUpDatabaseRemote  checkServerIsUp  sendEmailUtil  sqlDump.py  testexit
ofam/: README  README.md
ofreg/: .gitignore  README.txt  localsettings.py-example  manage.py  settings.py  urls.py  util.py
old_vt_manager/: MANIFEST.in
optin_manager/: setup.py  (+2 more)
src/aggrMgr/: INSTALL  Makefile  Makefile.am  Makefile.in  aggrMgr.cc  aggrMgr.hh  linkInfo.hh  message.h  meta.xml
(+4687 files in other folders)
